@@ -12,6 +12,8 @@
     * Enabling AUTOWRAP_MODE in VT100Terminal by default 
       for long command lines.
       
+    * Added support for ANSI "Cursor Horizontal Absolute".
+      
 2003-01-17	Ujwal S. Sathyam <ujwal@setlurgroup.com>
 
     * Added support to specify text highlight/selection color 
